Have VizProcessContextProvider use InProcessCommandBuffer directly.

VizProcessContextProvider relies on GLInProcessContext to own/initialize
some classes necessary to support a command buffer. We'll need to access
even more internal state from GLInProcessContext for memory reporting
which means adding another accessor. Instead of adding another
accessors, move initialization logic into VizProcessContextProvider.
This removes a step of indirection and makes the code a bit easier to
understand.

Bug: 876508
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ib66ad5596e6c349695a25279b65792260ea89105
Reviewed-on: https://chromium-review.googlesource.com/1231829
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592241}
Former-commit-id: 1853b734e013824b9a25a24f172ccd6a15cdf2b6