components/viz/common/gl_helper_benchmark.cc
@@ -76,7 +76,6 @@ class GLHelperBenchmark : public testing::Test {
                              attributes, gpu::SharedMemoryLimits(),
                              nullptr, /* gpu_memory_buffer_manager */
                              nullptr, /* image_factory */
-                             nullptr /* gpu_channel_manager_delegate */,
                              base::ThreadTaskRunnerHandle::Get());
     DCHECK_EQ(result, gpu::ContextResult::kSuccess);
     gl_ = context_->GetImplementation();
