components/viz/service/display_embedder/viz_process_context_provider.cc
@@ -9,7 +9,6 @@
 #include <utility>
 
 #include "base/lazy_instance.h"
-#include "base/macros.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/single_thread_task_runner.h"
 #include "base/sys_info.h"
@@ -19,18 +18,16 @@
 #include "components/viz/common/gpu/context_lost_reason.h"
 #include "components/viz/common/resources/platform_color.h"
 #include "gpu/GLES2/gl2extchromium.h"
+#include "gpu/command_buffer/client/gles2_cmd_helper.h"
 #include "gpu/command_buffer/client/gles2_implementation.h"
 #include "gpu/command_buffer/client/raster_implementation_gles.h"
-#include "gpu/command_buffer/common/context_creation_attribs.h"
+#include "gpu/command_buffer/client/shared_memory_limits.h"
+#include "gpu/command_buffer/client/transfer_buffer.h"
 #include "gpu/command_buffer/common/skia_utils.h"
-#include "gpu/command_buffer/service/mailbox_manager.h"
-#include "gpu/command_buffer/service/sync_point_manager.h"
 #include "gpu/config/gpu_feature_info.h"
 #include "gpu/config/gpu_preferences.h"
 #include "gpu/ipc/common/surface_handle.h"
-#include "gpu/ipc/gl_in_process_context.h"
-#include "gpu/ipc/gpu_in_process_thread_service.h"
-#include "gpu/ipc/in_process_command_buffer.h"
+#include "gpu/skia_bindings/gles2_implementation_with_grcontext_support.h"
 #include "gpu/skia_bindings/grcontext_for_gles2_interface.h"
 #include "third_party/khronos/GLES2/gl2.h"
 #include "third_party/khronos/GLES2/gl2ext.h"
@@ -96,31 +93,18 @@ VizProcessContextProvider::VizProcessContextProvider(
     gpu::GpuChannelManagerDelegate* gpu_channel_manager_delegate,
     const gpu::SharedMemoryLimits& limits,
     bool requires_alpha_channel)
-    : attributes_(CreateAttributes(requires_alpha_channel)),
-      context_(std::make_unique<gpu::GLInProcessContext>()),
-      context_result_(
-          context_->Initialize(std::move(task_executor),
-                               nullptr,
-                               (surface_handle == gpu::kNullSurfaceHandle),
-                               surface_handle,
-                               attributes_,
-                               limits,
-                               gpu_memory_buffer_manager,
-                               image_factory,
-                               gpu_channel_manager_delegate,
-                               base::ThreadTaskRunnerHandle::Get())) {
+    : attributes_(CreateAttributes(requires_alpha_channel)) {
+  InitializeContext(std::move(task_executor), surface_handle,
+                    gpu_memory_buffer_manager, image_factory,
+                    gpu_channel_manager_delegate, limits);
+
   if (context_result_ == gpu::ContextResult::kSuccess) {
-    auto* gles2_implementation = context_->GetImplementation();
-    cache_controller_ = std::make_unique<ContextCacheController>(
-        gles2_implementation, base::ThreadTaskRunnerHandle::Get());
-    // |context_| is owned here so bind an unretained pointer or there will be a
-    // circular reference preventing destruction.
-    gles2_implementation->SetLostContextCallback(base::BindOnce(
+    // |gles2_implementation_| is owned here so bind an unretained pointer or
+    // there will be a circular reference preventing destruction.
+    gles2_implementation_->SetLostContextCallback(base::BindOnce(
         &VizProcessContextProvider::OnContextLost, base::Unretained(this)));
   } else {
-    // Context initialization failed. Record UMA and cleanup.
     UmaRecordContextLost(CONTEXT_INIT_FAILED);
-    context_.reset();
   }
 }
 
@@ -139,11 +123,11 @@ gpu::ContextResult VizProcessContextProvider::BindToCurrentThread() {
 }
 
 gpu::gles2::GLES2Interface* VizProcessContextProvider::ContextGL() {
-  return context_->GetImplementation();
+  return gles2_implementation_.get();
 }
 
 gpu::ContextSupport* VizProcessContextProvider::ContextSupport() {
-  return context_->GetImplementation();
+  return gles2_implementation_.get();
 }
 
 class GrContext* VizProcessContextProvider::GrContext() {
@@ -166,17 +150,18 @@ ContextCacheController* VizProcessContextProvider::CacheController() {
 }
 
 base::Lock* VizProcessContextProvider::GetLock() {
-  return &context_lock_;
+  // Locking isn't supported on display compositor contexts.
+  return nullptr;
 }
 
 const gpu::Capabilities& VizProcessContextProvider::ContextCapabilities()
     const {
-  return context_->GetCapabilities();
+  return command_buffer_->GetCapabilities();
 }
 
 const gpu::GpuFeatureInfo& VizProcessContextProvider::GetGpuFeatureInfo()
     const {
-  return context_->GetGpuFeatureInfo();
+  return command_buffer_->GetGpuFeatureInfo();
 }
 
 void VizProcessContextProvider::AddObserver(ContextLostObserver* obs) {
@@ -190,7 +175,57 @@ void VizProcessContextProvider::RemoveObserver(ContextLostObserver* obs) {
 void VizProcessContextProvider::SetUpdateVSyncParametersCallback(
     const gpu::InProcessCommandBuffer::UpdateVSyncParametersCallback&
         callback) {
-  context_->SetUpdateVSyncParametersCallback(callback);
+  command_buffer_->SetUpdateVSyncParametersCallback(callback);
+}
+
+void VizProcessContextProvider::InitializeContext(
+    scoped_refptr<gpu::CommandBufferTaskExecutor> task_executor,
+    gpu::SurfaceHandle surface_handle,
+    gpu::GpuMemoryBufferManager* gpu_memory_buffer_manager,
+    gpu::ImageFactory* image_factory,
+    gpu::GpuChannelManagerDelegate* gpu_channel_manager_delegate,
+    const gpu::SharedMemoryLimits& mem_limits) {
+  const bool is_offscreen = surface_handle == gpu::kNullSurfaceHandle;
+
+  command_buffer_ =
+      std::make_unique<gpu::InProcessCommandBuffer>(std::move(task_executor));
+  context_result_ = command_buffer_->Initialize(
+      /*surface=*/nullptr, is_offscreen, surface_handle, attributes_,
+      /*share_command_buffer=*/nullptr, gpu_memory_buffer_manager,
+      image_factory, gpu_channel_manager_delegate,
+      base::ThreadTaskRunnerHandle::Get(), nullptr, nullptr);
+  if (context_result_ != gpu::ContextResult::kSuccess) {
+    DLOG(ERROR) << "Failed to initialize InProcessCommmandBuffer";
+    return;
+  }
+
+  // Create the GLES2 helper, which writes the command buffer protocol.
+  gles2_helper_ =
+      std::make_unique<gpu::gles2::GLES2CmdHelper>(command_buffer_.get());
+  context_result_ = gles2_helper_->Initialize(mem_limits.command_buffer_size);
+  if (context_result_ != gpu::ContextResult::kSuccess) {
+    DLOG(ERROR) << "Failed to initialize GLES2CmdHelper";
+    return;
+  }
+
+  transfer_buffer_ = std::make_unique<gpu::TransferBuffer>(gles2_helper_.get());
+
+  // Create the object exposing the OpenGL API.
+  gles2_implementation_ =
+      std::make_unique<skia_bindings::GLES2ImplementationWithGrContextSupport>(
+          gles2_helper_.get(), /*share_group=*/nullptr, transfer_buffer_.get(),
+          attributes_.bind_generates_resource,
+          attributes_.lose_context_when_out_of_memory,
+          /*support_client_side_arrays=*/false, command_buffer_.get());
+
+  context_result_ = gles2_implementation_->Initialize(mem_limits);
+  if (context_result_ != gpu::ContextResult::kSuccess) {
+    DLOG(ERROR) << "Failed to initialize GLES2Implementation";
+    return;
+  }
+
+  cache_controller_ = std::make_unique<ContextCacheController>(
+      gles2_implementation_.get(), base::ThreadTaskRunnerHandle::Get());
 }
 
 void VizProcessContextProvider::OnContextLost() {
@@ -199,8 +234,7 @@ void VizProcessContextProvider::OnContextLost() {
   if (gr_context_)
     gr_context_->OnLostContext();
 
-  gpu::CommandBuffer::State state =
-      context_->GetCommandBuffer()->GetLastState();
+  gpu::CommandBuffer::State state = command_buffer_->GetLastState();
   UmaRecordContextLost(
       GetContextLostReason(state.error, state.context_lost_reason));
 }
